--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,11 @@
     "name": "npa-howtopay",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-    "runArgs": [
-        // avoid UID/GID remapping under rootless Podman
-        "--userns=keep-id"
-      ],
-    "features": {},
+    "features": {
+        // Install just
+        "ghcr.io/guiyomh/features/just:0.1.0": {
+            "version": "1.40.0"
+        }},
 
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": "./.devcontainer/postCreateCommand.sh",
