--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+dependencies = [
+    "numpy>=2.0.2",
+]
 
 [project.urls]
 Homepage = "https://switchbox-data.github.io/npa-howtopay/"
@@ -30,7 +33,7 @@ dev = [
     "tox-uv>=1.11.3",
     "deptry>=0.23.0",
     "mypy>=0.991",
-    
+
     "ruff>=0.11.5",
     "mkdocs>=1.4.2",
     "mkdocs-material>=8.5.10",
@@ -42,10 +45,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["default"]
+packages = ["npa_howtopay"]
+
+# Include YAML scenario files in the wheel
+[tool.hatch.build.targets.wheel.include]
+"npa_howtopay/data/*.yaml" = "data"
 
 [tool.mypy]
-files = ["default"]
+files = ["src/npa_howtopay"]
 disallow_untyped_defs = true
 disallow_any_unimported = true
 no_implicit_optional = true
@@ -107,5 +114,3 @@ ignore = [
 
 [tool.ruff.format]
 preview = true
-
-
