skeleton.pyi and initial file structure for model, with sketches of code; disable linter for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ line-length = 120
 fix = true
 
 [tool.ruff.lint]
+exclude = ["**/*.py", "**/*.pyi"] # TEMPORARY!!!!
 select = [
     # flake8-2020
     "YTT",
