--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
+    "attrs>=25.3.0",
     "numpy>=2.0.2",
     "polars>=1.32.3",
 ]
