add years to inputs

--- a/src/npa_howtopay/data/sample.yaml
+++ b/src/npa_howtopay/data/sample.yaml
@@ -37,6 +37,7 @@ electric:
   ror: 0.09
 
 shared:
+  start_year: 2025
   cost_inflation_rate: 0.03
   discount_rate: 0.075
   inflation_rate: 0.025
