--- a/src/npa_howtopay/data/sample.yaml
+++ b/src/npa_howtopay/data/sample.yaml
@@ -4,13 +4,13 @@ description: "Sample run - High adoption, high efficiency"
 gas:
   baseline_non_lpp_ratebase_growth: 0.015
   default_depreciation_lifetime: 28
-  gas_generation_cost_per_therm: 0.055
+  gas_generation_cost_per_therm_init: 0.055
   lpp_depreciation_lifetime: 60
   non_lpp_depreciation_lifetime: 28
   num_users_init: 450
   per_user_heating_need_therms: 45.0
   pipeline_maintenance_cost_pct: 0.022
-  pipeline_replacement_cost: 9000.0
+  pipeline_replacement_cost_init: 9000.0
   pipeline_replacement_lifetime: 30.0
   ratebase_init: 900000.0
   ror: 0.08
@@ -19,9 +19,9 @@ electric:
   aircon_peak_kw: 2.8
   baseline_non_npa_ratebase_growth: 0.02
   default_depreciation_lifetime: 22
-  distribution_cost_per_peak_kw_increase: 550.0
+  distribution_cost_per_peak_kw_increase_init: 550.0
   electric_maintenance_cost_pct: 0.014
-  electricity_generation_cost_per_kwh: 0.11
+  electricity_generation_cost_per_kwh_init: 0.11
   grid_upgrade_depreciation_lifetime: 18
   hp_efficiency: 3
   hp_peak_kw: 4.5
@@ -33,6 +33,6 @@ electric:
 shared:
   cost_inflation_rate: 0.03
   discount_rate: 0.075
-  npa_install_costs: 5500.0
+  npa_install_costs_init: 5500.0
   npa_lifetime: 18.0
   start_year: 2025
