--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install package in editable mode
+        run: uv run pip install -e .
+
       - name: Run tests
         run: uv run python -m pytest tests
 
