--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,11 @@ classifiers = [
 ]
 dependencies = [
     "attrs>=25.3.0",
+    "matplotlib>=3.9.4",
     "numpy>=2.0.2",
     "polars>=1.32.3",
     "pyyaml>=6.0",
+    "ruamel-yaml>=0.18.15",
 ]
 
 [project.urls]
