test doc render

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,5 +67,25 @@ jobs:
       - name: Set up the environment
         uses: ./.github/actions/setup-python-env
 
+      - name: Install docs dependencies
+        run: uv sync --group docs
+
       - name: Check if documentation can be built
         run: uv run mkdocs build -s
+
+
+  deploy-docs:
+    needs: check-docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+
+      - name: Set up the environment
+        uses: ./.github/actions/setup-python-env
+
+      - name: Install docs dependencies
+        run: uv sync --group docs
+
+      - name: Deploy documentation
+        run: uv run mkdocs gh-deploy --force
