--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,12 @@
         // Install just
         "ghcr.io/guiyomh/features/just:0.1.0": {
             "version": "1.40.0"
+        },
+        "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {
+            "installChromium": true
+        },
+        "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+            "packages": "chromium"
         }},
 
     // Use 'postCreateCommand' to run commands after the container is created.
