--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,13 @@ marimo/_lsp/
 __marimo__/
 .vscode/launch.json
 .DS_Store
+
+outputs/
+/.quarto/
+*.html
+.DS_Store
+*_files/
+
+# Explicitly include everything in docs directory
+!docs/
+!docs/**/*
