--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,17 @@ dev = [
     "tox-uv>=1.11.3",
     "deptry>=0.23.0",
     "mypy>=0.991",
-    "types-PyYAML>=6.0.12.20250822",  # Move it here
+    "types-PyYAML>=6.0.12.20250822", # Move it here
     "ruff>=0.11.5",
+]
+docs = [
     "mkdocs>=1.4.2",
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
+    "mkquartodocs>=0.5.0",
+    "mkdocs-mermaid-plugin>=0.1.0",
+    "pymdown-extensions>=10.0.0",
+    "mkdocs-mermaid2-plugin>=1.2.1",
 ]
 
 [build-system]
