--- a/src/npa_howtopay/data/sample.yaml
+++ b/src/npa_howtopay/data/sample.yaml
@@ -9,6 +9,7 @@ gas:
   gas_generation_cost_per_therm_init: 3  # cost per therm of natural gas, in initial year of model
   num_users_init: 4.5e6  # initial number of gas users
   per_user_heating_need_therms: 400.0  # household annual heating need in therms
+  per_user_water_heating_need_therms: 100.0  # household annual water heating need in therms
   pipeline_maintenance_cost_pct: 0.022  # yearly opex as a perecent of existing ratebase value (not including npas)
   user_bill_fixed_charge: 120
   ratebase_init: 30.0e9 # intitial ratebase
@@ -22,6 +23,7 @@ electric:
   distribution_cost_per_peak_kw_increase_init: 550.0 # cost to increase grid capacity to support one additional kw of peak demand, in initial year of model
   electric_maintenance_cost_pct: 0.014 # yearly opex as a perecent of existing ratebase value (not including npas)
   electricity_generation_cost_per_kwh_init: 0.11 # cost per kwh of electricity generation (just the generation cost), in initial year of model
+  water_heater_efficiency: 3 # water heater efficiency
   hp_efficiency: 3 # hp heating efficiency
   hp_peak_kw: 4.5 # peak energy consumption of a household heat pump unit
   num_users_init: 5.5e6 # initial number of electric users
