--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Home: index.md
   - Modules: modules.md
   - Formulas: formulas.md
+  - Input Parameter Reference Table: variable_reference_table.md
 plugins:
   - search
   - mkdocstrings:
